Horizontal scroll fix 10

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
     display: grid;
     justify-content: center;
     align-self: start;
-    width: auto;
+    /* width: auto; */
     min-width: 300px;
     max-width: 100%;
     padding: 1rem;
